--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -57,21 +57,21 @@ smartTOCHideUnfocusedChildren = false
   layoutBackgroundBlur = true # only used when heroStyle equals background
   showBreadcrumbs = true
   showDraftLabel = true
-  showEdit = true
-  editURL = "https://github.com/nunocoracao/blowfish/tree/main/exampleSite/content"
+  # showEdit = true
+  # editURL = "https://github.com/nunocoracao/blowfish/tree/main/exampleSite/content"
   editAppendPath = true
   seriesOpened = false
   showHeadingAnchors = true
   showPagination = true
   invertPagination = false
-  showReadingTime = true
+  # showReadingTime = true
   showTableOfContents = true
   showRelatedContent = true
   relatedContentLimit = 6
   showTaxonomies = true 
   showAuthorsBadges = true 
   showWordCount = false
-  sharingLinks = [ "linkedin", "email"]
+  # sharingLinks = [ "linkedin", "email"]
 
 [list]
   showHero = true
