--- a/config/_default/menus.en.toml
+++ b/config/_default/menus.en.toml
@@ -14,38 +14,35 @@
   name = "C++"
   pageRef = "cpp"
   weight = 10
-  url = "/cpp"
+
+# [[main]]
+#   name = "Shortcodes"
+#   pageRef = "docs/shortcodes"
+#   weight = 15
+
+# [[main]]
+#   name = "Samples"
+#   pageRef = "samples"
+#   weight = 16
 
 [[main]]
-  name = "Shortcodes"
-  pageRef = "docs/shortcodes"
-  weight = 15
-
-[[main]]
-  name = "Samples"
-  pageRef = "samples"
-  weight = 16
-
-[[main]]
-  name = "Examples"
+  name = "Finance"
   weight = 20
 
 [[main]]
-  name = "Showcase"
-  parent = "Examples"
-  pageRef = "examples"
+  name = "量化"
+  parent = "Finance"
   weight = 30
 
 [[main]]
-  name = "Recipes"
-  parent = "Examples"
-  pageRef = "guides"
+  name = "数据"
+  parent = "Finance"
   weight = 40
 
-[[main]]
-  name = "Users"
-  pageRef = "users"
-  weight = 90
+# [[main]]
+#   name = "Users"
+#   pageRef = "users"
+#   weight = 90
 
 [[main]]
   identifier = "github"
