--- a/config/_default/menus.en.toml
+++ b/config/_default/menus.en.toml
@@ -16,8 +16,8 @@
   weight = 10
 
 # [[main]]
-#   name = "Shortcodes"
-#   pageRef = "docs/shortcodes"
+#   name = "Reading"
+#   pageRef = "reading"
 #   weight = 15
 
 # [[main]]
