--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -18,8 +18,8 @@ mainSections = ["docs"]
 disableImageOptimization = false
 disableTextInHeader = false
 
-defaultBackgroundImage = "/img/ocean.jpg"
-defaultFeaturedImage = "/img/ocean.jpg"
+defaultBackgroundImage = "/img/lervisnh_github.jpg"
+defaultFeaturedImage = "/img/lervisnh_github.jpg"
 
 highlightCurrentMenuArea = true
 smartTOC = true
